[tool.poetry]
name = "epilog"
version = "0.1.0"
description = "CLI Tool for generating changlogs based on git commits on separate branches"
authors = ["mateoduke <mateoalexiduke@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.6.4"
pytest = "^8.1.1"
coverage = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
